Styling: Fix some more dark mode colors

--- a/prosjekt2/frontend/src/components/Header/Header.css
+++ b/prosjekt2/frontend/src/components/Header/Header.css
@@ -132,4 +132,8 @@
 	.header-title {
 		color: white;
 	}
+
+	.navButton:hover {
+		border-color: var(--theme-dark-pink);
+	}
 }
